feat: add mass get users route
