# internal/api/router/router.go
@@ -48,4 +48,5 @@ func registerAdminRoutes(r gin.RouterGroup) {
 	r.POST("admin/user/:user_id/ban", admin.ChangeUserStatushandler(types.StatusBanned))
 	r.POST("admin/user/:user_id/unban", admin.ChangeUserStatushandler(types.StatusOk))
 	r.POST("admin/user/:user_id/change-role", middleware.RoleAuthMiddleware(types.RoleOwner), admin.ChangeUserRoleHandler)
+	r.GET("admin/users", middleware.RoleAuthMiddleware(types.RoleSuperAdmin), admin.GetAllUsersHandler)
 }
